--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dino Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div class="game">
+        <div id="cactus"></div>
+        <div id="dino"></div>
+    </div>
     
+    <script src="app.js"></script>
 </body>
 </html>
